fix: image sizes to avoid blurriness in final html

--- a/doc_templates/pandoc.css
+++ b/doc_templates/pandoc.css
@@ -347,6 +347,24 @@ table td {
   }
 }
 
+.w40center {
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.w50center {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.w50 {
+    width: 50%;
+}
+
 .w75 {
     width: 75%;
     margin-left: 12.5%;
